# spectrogram

./: CMakeLists.txt
ui/: Chart.qml  main.qml  qml.qrc
